@@ -1,10 +1,12 @@
 /*
- * Copyright 2018-2022 contributors to the Marquez project
+ * Copyright 2018-2023 contributors to the Marquez project
  * SPDX-License-Identifier: Apache-2.0
  */
 
 package marquez;
 
+import static marquez.db.ColumnLineageTestUtils.getDatasetA;
+import static marquez.db.ColumnLineageTestUtils.getDatasetB;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import com.fasterxml.jackson.core.type.TypeReference;
@@ -22,22 +24,31 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
+import marquez.api.JdbiUtils;
+import marquez.client.models.ColumnLineage;
 import marquez.client.models.Dataset;
 import marquez.client.models.DatasetId;
 import marquez.client.models.DatasetVersion;
 import marquez.client.models.DbTableMeta;
+import marquez.client.models.Job;
 import marquez.client.models.JobMeta;
+import marquez.client.models.Namespace;
 import marquez.client.models.Run;
 import marquez.client.models.RunMeta;
 import marquez.client.models.StreamVersion;
 import marquez.common.Utils;
 import marquez.db.LineageTestUtils;
+import marquez.jdbi.MarquezJdbiExternalPostgresExtension;
 import marquez.service.models.LineageEvent;
+import org.jdbi.v3.core.Jdbi;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 
 @org.junit.jupiter.api.Tag("IntegrationTests")
+@ExtendWith(MarquezJdbiExternalPostgresExtension.class)
 public class DatasetIntegrationTest extends BaseIntegrationTest {
 
   @BeforeEach
@@ -45,6 +56,11 @@ public class DatasetIntegrationTest extends BaseIntegrationTest {
     createNamespace(NAMESPACE_NAME);
     createSource(DB_TABLE_SOURCE_NAME);
     createSource(STREAM_SOURCE_NAME);
+  }
+
+  @AfterEach
+  public void tearDown(Jdbi jdbi) {
+    JdbiUtils.cleanDatabase(jdbi);
   }
 
   @Test
@@ -125,15 +141,7 @@ public class DatasetIntegrationTest extends BaseIntegrationTest {
                         .build()))
             .build();
 
-    final CompletableFuture<Integer> resp =
-        this.sendLineage(Utils.toJson(lineageEvent))
-            .thenApply(HttpResponse::statusCode)
-            .whenComplete(
-                (val, error) -> {
-                  if (error != null) {
-                    Assertions.fail("Could not complete request");
-                  }
-                });
+    final CompletableFuture<Integer> resp = sendEvent(lineageEvent);
     assertThat(resp.join()).isEqualTo(201);
 
     datasetFacets.setAdditional(inputFacets);
@@ -156,15 +164,7 @@ public class DatasetIntegrationTest extends BaseIntegrationTest {
             .outputs(Collections.emptyList())
             .build();
 
-    final CompletableFuture<Integer> readResp =
-        this.sendLineage(Utils.toJson(readEvent))
-            .thenApply(HttpResponse::statusCode)
-            .whenComplete(
-                (val, error) -> {
-                  if (error != null) {
-                    Assertions.fail("Could not complete request");
-                  }
-                });
+    final CompletableFuture<Integer> readResp = sendEvent(readEvent);
     assertThat(readResp.join()).isEqualTo(201);
 
     // update dataset facet to include input and output facets
@@ -249,7 +249,6 @@ public class DatasetIntegrationTest extends BaseIntegrationTest {
             .inputs(ImmutableSet.of())
             .outputs(NAMESPACE_NAME, "table1")
             .location(JOB_LOCATION)
-            .context(JOB_CONTEXT)
             .description(JOB_DESCRIPTION)
             .build();
 
@@ -366,26 +365,19 @@ public class DatasetIntegrationTest extends BaseIntegrationTest {
     String namespace = "namespace";
     String name = "table";
     LineageEvent event =
-        new LineageEvent(
-            "COMPLETE",
-            Instant.now().atZone(ZoneId.systemDefault()),
-            new LineageEvent.Run(UUID.randomUUID().toString(), null),
-            new LineageEvent.Job("namespace", "job_name", null),
-            List.of(new LineageEvent.Dataset(namespace, name, LineageTestUtils.newDatasetFacet())),
-            Collections.emptyList(),
-            "the_producer");
+        LineageEvent.builder()
+            .eventType("COMPLETE")
+            .eventTime(Instant.now().atZone(ZoneId.systemDefault()))
+            .run(new LineageEvent.Run(UUID.randomUUID().toString(), null))
+            .job(new LineageEvent.Job("namespace", "job_name", null))
+            .inputs(
+                List.of(
+                    new LineageEvent.Dataset(namespace, name, LineageTestUtils.newDatasetFacet())))
+            .outputs(Collections.emptyList())
+            .producer("the_producer")
+            .build();
 
-    final CompletableFuture<Integer> resp =
-        this.sendLineage(Utils.toJson(event))
-            .thenApply(HttpResponse::statusCode)
-            .whenComplete(
-                (val, error) -> {
-                  if (error != null) {
-                    Assertions.fail("Could not complete request");
-                  }
-                });
-
-    // Ensure the event was correctly rejected and a proper response code returned.
+    final CompletableFuture<Integer> resp = sendEvent(event);
     assertThat(resp.join()).isEqualTo(201);
 
     client.deleteDataset(namespace, name);
@@ -399,14 +391,44 @@ public class DatasetIntegrationTest extends BaseIntegrationTest {
     String namespace = "namespace";
     String name = "anotherTable";
     LineageEvent event =
-        new LineageEvent(
-            "COMPLETE",
-            Instant.now().atZone(ZoneId.systemDefault()),
-            new LineageEvent.Run(UUID.randomUUID().toString(), null),
-            new LineageEvent.Job("namespace", "job_name", null),
-            List.of(new LineageEvent.Dataset(namespace, name, LineageTestUtils.newDatasetFacet())),
-            Collections.emptyList(),
-            "the_producer");
+        LineageEvent.builder()
+            .eventType("COMPLETE")
+            .eventTime(Instant.now().atZone(ZoneId.systemDefault()))
+            .run(new LineageEvent.Run(UUID.randomUUID().toString(), null))
+            .job(new LineageEvent.Job("namespace", "job_name", null))
+            .inputs(
+                List.of(
+                    new LineageEvent.Dataset(namespace, name, LineageTestUtils.newDatasetFacet())))
+            .outputs(Collections.emptyList())
+            .producer("the_producer")
+            .build();
+
+    CompletableFuture<Integer> resp = sendEvent(event);
+    assertThat(resp.join()).isEqualTo(201);
+
+    client.deleteDataset(namespace, name);
+
+    List<Dataset> datasets = client.listDatasets(namespace);
+    assertThat(datasets).hasSize(0);
+    resp = sendEvent(event);
+    assertThat(resp.join()).isEqualTo(201);
+
+    datasets = client.listDatasets(namespace);
+    assertThat(datasets).hasSize(1);
+  }
+
+  @Test
+  public void testApp_getDatasetContainsColumnLineage() {
+    LineageEvent event =
+        LineageEvent.builder()
+            .eventType("COMPLETE")
+            .eventTime(Instant.now().atZone(ZoneId.systemDefault()))
+            .run(new LineageEvent.Run(UUID.randomUUID().toString(), null))
+            .job(new LineageEvent.Job("namespace", "job_name", null))
+            .inputs(List.of(getDatasetA()))
+            .outputs(List.of(getDatasetB()))
+            .producer("the_producer")
+            .build();
 
     CompletableFuture<Integer> resp =
         this.sendLineage(Utils.toJson(event))
@@ -417,27 +439,139 @@ public class DatasetIntegrationTest extends BaseIntegrationTest {
                     Assertions.fail("Could not complete request");
                   }
                 });
+    resp.join();
 
-    // Ensure the event was correctly rejected and a proper response code returned.
+    // verify listDatasets contains column lineage
+    List<ColumnLineage> columnLineage;
+
+    columnLineage =
+        client.listDatasets("namespace").stream()
+            .filter(d -> d.getName().equals("dataset_b"))
+            .findAny()
+            .get()
+            .getColumnLineage();
+    assertThat(columnLineage).hasSize(1);
+    assertThat(columnLineage.get(0).getInputFields()).hasSize(2);
+
+    // verify getDataset returns non-empty column lineage
+    columnLineage = client.getDataset("namespace", "dataset_b").getColumnLineage();
+    assertThat(columnLineage).hasSize(1);
+    assertThat(columnLineage.get(0).getInputFields()).hasSize(2);
+  }
+
+  @Test
+  public void testApp_doesNotShowDeletedDatasetAfterDeleteNamespace() throws IOException {
+    String namespace = "namespace";
+    String name = "table";
+    LineageEvent event =
+        LineageEvent.builder()
+            .eventType("COMPLETE")
+            .eventTime(Instant.now().atZone(ZoneId.systemDefault()))
+            .run(new LineageEvent.Run(UUID.randomUUID().toString(), null))
+            .job(new LineageEvent.Job("namespace", "job_name", null))
+            .inputs(
+                List.of(
+                    new LineageEvent.Dataset(namespace, name, LineageTestUtils.newDatasetFacet())))
+            .outputs(Collections.emptyList())
+            .producer("the_producer")
+            .build();
+
+    final CompletableFuture<Integer> resp = sendEvent(event);
     assertThat(resp.join()).isEqualTo(201);
 
-    client.deleteDataset(namespace, name);
+    client.deleteNamespace(namespace);
 
     List<Dataset> datasets = client.listDatasets(namespace);
     assertThat(datasets).hasSize(0);
-    resp =
-        this.sendLineage(Utils.toJson(event))
-            .thenApply(HttpResponse::statusCode)
-            .whenComplete(
-                (val, error) -> {
-                  if (error != null) {
-                    Assertions.fail("Could not complete request");
-                  }
-                });
+  }
 
+  @Test
+  public void testApp_doesNotShowDeletedDatasetAfterUndeleteNamespace() throws IOException {
+    String namespaceName = "namespace";
+    String name = "table";
+
+    LineageEvent firstEvent =
+        LineageEvent.builder()
+            .eventType("COMPLETE")
+            .eventTime(Instant.now().atZone(ZoneId.systemDefault()))
+            .run(new LineageEvent.Run(UUID.randomUUID().toString(), null))
+            .job(new LineageEvent.Job(namespaceName, "job_name", null))
+            .inputs(
+                List.of(
+                    new LineageEvent.Dataset(
+                        namespaceName, name, LineageTestUtils.newDatasetFacet())))
+            .outputs(Collections.emptyList())
+            .producer("the_producer")
+            .build();
+
+    LineageEvent secondEvent =
+        LineageEvent.builder()
+            .eventType("COMPLETE")
+            .eventTime(Instant.now().atZone(ZoneId.systemDefault()))
+            .run(new LineageEvent.Run(UUID.randomUUID().toString(), null))
+            .job(new LineageEvent.Job(namespaceName, "second_job_name", null))
+            .inputs(
+                List.of(
+                    new LineageEvent.Dataset(
+                        namespaceName, name + "2", LineageTestUtils.newDatasetFacet())))
+            .outputs(Collections.emptyList())
+            .producer("the_producer")
+            .build();
+
+    CompletableFuture<Integer> resp = sendEvent(firstEvent);
     assertThat(resp.join()).isEqualTo(201);
 
-    datasets = client.listDatasets(namespace);
+    resp = sendEvent(secondEvent);
+    assertThat(resp.join()).isEqualTo(201);
+
+    List<Dataset> datasets = client.listDatasets(namespaceName);
+    assertThat(datasets).hasSize(2);
+
+    client.deleteNamespace(namespaceName);
+
+    List<Namespace> namespaces = client.listNamespaces();
+    assertThat(namespaces)
+        .anySatisfy(
+            namespace -> {
+              assertThat(namespace.getIsHidden()).isTrue();
+              assertThat(namespace.getName()).isEqualTo(namespaceName);
+            });
+
+    datasets = client.listDatasets(namespaceName);
+    assertThat(datasets).hasSize(0);
+
+    List<Job> jobs = client.listJobs(namespaceName);
+    assertThat(jobs).hasSize(0);
+
+    LineageEvent eventThatWillUndeleteNamespace =
+        LineageEvent.builder()
+            .eventType("COMPLETE")
+            .eventTime(Instant.now().atZone(ZoneId.systemDefault()))
+            .run(new LineageEvent.Run(UUID.randomUUID().toString(), null))
+            .job(new LineageEvent.Job(namespaceName, "job_name", null))
+            .inputs(
+                List.of(
+                    new LineageEvent.Dataset(
+                        namespaceName, name, LineageTestUtils.newDatasetFacet())))
+            .outputs(Collections.emptyList())
+            .producer("the_producer")
+            .build();
+
+    resp = sendEvent(eventThatWillUndeleteNamespace);
+    assertThat(resp.join()).isEqualTo(201);
+
+    namespaces = client.listNamespaces();
+    assertThat(namespaces)
+        .anySatisfy(
+            namespace -> {
+              assertThat(namespace.getIsHidden()).isFalse();
+              assertThat(namespace.getName()).isEqualTo(namespaceName);
+            });
+
+    datasets = client.listDatasets(namespaceName);
     assertThat(datasets).hasSize(1);
+
+    jobs = client.listJobs(namespaceName);
+    assertThat(jobs).hasSize(1);
   }
 }
